# portfolio-risk-analysis

./: .gitignore  README.md  portfolio_risk_analysis.ipynb  pyproject.toml  requirements.txt
src/portfolio_risk/: __init__.py  data.py  markowitz.py  monte_carlo.py  plotting.py  portfolios.py  returns.py  risk_metrics.py
tests/: test_markowitz.py  test_portfolios.py  test_returns.py  test_risk_metrics.py
