[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-risk-analysis"
version = "0.1.0"
description = "Simple portfolio risk analysis with Monte Carlo, Markowitz optimization, and VaR/CVaR."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "yfinance",
]

[tool.setuptools.packages.find]
where = ["src"]
